# Zero_to_platformer

./: Cargo.toml
assets/maps/: lobby.map  lobby_old.map
assets/tiles/: all_bar_bottom_pink.tile  all_bar_bottom_yellow.tile  dirt.tile  grass_all_bar_bottom_pink.tile  grass_all_bar_bottom_yellow.tile  grass_all_bar_left_pink.tile  grass_all_bar_left_yellow.tile  grass_all_bar_right_pink.tile  grass_all_bar_right_yellow.tile  grass_all_bar_top_pink.tile  grass_all_bar_top_yellow.tile  grass_bottom_left_pink.tile  grass_bottom_left_yellow.tile  grass_bottom_pink.tile  grass_bottom_right_pink.tile  grass_bottom_right_yellow.tile  grass_bottom_yellow.tile  grass_left_pink.tile  grass_left_yellow.tile  grass_right_pink.tile  grass_right_yellow.tile  grass_top_bottom_pink.tile  grass_top_bottom_yellow.tile  grass_top_left_pink.tile  grass_top_left_yellow.tile  grass_top_pink.tile  grass_top_right_pink.tile  grass_top_right_yellow.tile  grass_top_yellow.tile  left_right_pink.tile  left_right_yellow.tile  solid_pink.tile  solid_yellow.tile
src/: camera.rs  editor_window.rs  main.rs  map.rs  old_map.rs  player.rs
