[package]
name = "downwell_clone"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.14.2", features = ["file_watcher"]}
avian2d = "0.1.2"
leafwing-input-manager = "0.15.0"
bevy_editor_pls = "0.9"
rand = "*"
strum = "*"
strum_macros = "*"
serde = "*"
ron = "*"
bevy-inspector-egui = "0.26.0"